- Changed the lorem ipsum text on proposals/ page to real content - Fixed the radial backgroung problem on iOS and Firefox

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -114,11 +114,11 @@ header
 .home header
   text-align: center
   background-color: #fff
-  background-image: -moz-radial-gradient(50% 40%, circle closest-side, #ffffff, rgba(255, 255, 255, 1) 8em,rgba(0, 0, 0, 0.05) 11em)
-  background-image: -webkit-radial-gradient(50% 40%, circle closest-side, #ffffff, rgba(255, 255, 255, 1) 8em,rgba(0, 0, 0, 0.05) 11em)
-  background-image: -o-radial-gradient(50% 40%, circle closest-side, #ffffff, rgba(255, 255, 255, 1) 8em,rgba(0, 0, 0, 0.05) 11em)
-  background-image: -ms-radial-gradient(50% 40%, circle closest-side, #ffffff, rgba(255, 255, 255, 1) 8em,rgba(0, 0, 0, 0.05) 11em)
-  background-image: radial-gradient(50% 40%, circle closest-side, #ffffff, rgba(255, 255, 255, 1) 8em,rgba(0, 0, 0, 0.05) 11em)
+  background-image: -moz-radial-gradient(50% 40%, circle closest-side, white, white 8em, darken(white, 5%) 11em)
+  background-image: -webkit-radial-gradient(50% 40%, circle closest-side, white, white 8em, darken(white, 5%) 11em)
+  background-image: -o-radial-gradient(50% 40%, circle closest-side, white, white 8em, darken(white, 5%) 11em)
+  background-image: -ms-radial-gradient(50% 40%, circle closest-side, white, white 8em, darken(white, 5%) 11em)
+  background-image: radial-gradient(50% 40%, circle closest-side, white, white 8em, darken(white, 5%) 11em)
 
   margin: -1em -1em 1em
   padding: 1em  
